8193933: Export ClassLoaderData claim state to support interleaved object traversal

Reviewed-by: coleenp, hseigel